kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nadsoft
  labels:
    name: nadsoft
    app: student-management
